@@ -460,6 +460,7 @@ All (GUI):
 - Fix item alignment in icon view in the generic wxListCtrl.
 - Support font-family/style, text-decoration in wxHtmlWindow (Blake Oleander).
 - Show ribbon tools help strings in tooltips (John Roberts).
+- Improve row/column selection modes in wxGrid (joostn).
 
 GTK:
 
